# doxa_p2p

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: encryption.py
tests/: conftest.py  test_encryption.py
