[project]
name = "doxa_p2p"
version = "0.0.1"
authors = [
  { name="Feluk6174", email="feluk6174@proton.me" },
]
description = "Backend for doxa p2p aplications"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Feluk6174/doxa_p2p"
"Bug Tracker" = "https://github.com/Feluk6174/doxa_p2p/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"